Fix print code block overlap; document change in README

--- a/css/style.css
+++ b/css/style.css
@@ -1258,6 +1258,12 @@ select {
     color: black;
     padding: 0;
   }
+	/* ADD THIS: - - -- - -- - - -- - - - -- - -- - - - */ 
+  pre, code {
+    line-height: 1.5 !important;
+    white-space: pre-wrap;
+    page-break-inside: avoid;
+  }
 
   .content {
     font-size: 10pt;
